# splat-highlight-pilot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TASK.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: clip.py  job_store.py  main.py  schemas.py
assets/: index-Bmuueov0.js  index-CftJDArE.css
docs/: api-design.md  architecture.md
e2e_tests/: e2e_test.py
tests/: test_clip.py  test_lint.py  test_main.py
web/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts
web/src/components/: DropZone.tsx  ErrorMessage.tsx  Header.tsx  OptionsPanel.tsx  Processing.tsx  ResultView.tsx
web/src/styles/: index.css
